--- a/package.json
+++ b/package.json
@@ -1,43 +1,59 @@
 {
-    "name" : "deep-is",
-    "version" : "0.0.0",
-    "description" : "node's assert.deepEqual algorithm except for NaN being equal to NaN",
-    "main" : "index.js",
-    "directories" : {
-        "lib" : ".",
-        "example" : "example",
-        "test" : "test"
-    },
-    "scripts" : {
-        "test" : "tap test/*.js"
-    },
-    "devDependencies" : {
-        "tap" : "~0.3.0",
-        "tape" : "~0.0.5"
-    },
-    "repository" : {
-        "type" : "git",
-        "url" : "http://github.com/thlorenz/deep-is.git"
-    },
-    "keywords" : [
-        "equality",
-        "equal",
-        "compare"
-    ],
-    "author" : {
-        "name" : "Thorsten Lorenz",
-        "email" : "thlorenz@gmx.de",
-        "url" : "http://thlorenz.com"
-    },
-    "license" : "MIT",
-    "testling" : {
-        "files" : "test/*.js",
-        "browsers" : {
-            "ie" : [ 6, 7, 8, 9 ],
-            "ff" : [ 3.5, 10, 15 ],
-            "chrome" : [ 10, 22 ],
-            "safari" : [ 5.1 ],
-            "opera" : [ 12 ]
-        }
+  "name": "deep-is",
+  "version": "0.1.0",
+  "description": "node's assert.deepEqual algorithm except for NaN being equal to NaN",
+  "main": "index.js",
+  "directories": {
+    "lib": ".",
+    "example": "example",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "tap test/*.js"
+  },
+  "devDependencies": {
+    "tap": "~0.3.0",
+    "tape": "~0.0.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/thlorenz/deep-is.git"
+  },
+  "keywords": [
+    "equality",
+    "equal",
+    "compare"
+  ],
+  "author": {
+    "name": "Thorsten Lorenz",
+    "email": "thlorenz@gmx.de",
+    "url": "http://thlorenz.com"
+  },
+  "license": "MIT",
+  "testling": {
+    "files": "test/*.js",
+    "browsers": {
+      "ie": [
+        6,
+        7,
+        8,
+        9
+      ],
+      "ff": [
+        3.5,
+        10,
+        15
+      ],
+      "chrome": [
+        10,
+        22
+      ],
+      "safari": [
+        5.1
+      ],
+      "opera": [
+        12
+      ]
     }
+  }
 }
