--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "email": "thlorenz@gmx.de",
     "url": "http://thlorenz.com"
   },
-  "license": "MIT",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/thlorenz/deep-is/blob/master/LICENSE"
+  },
   "testling": {
     "files": "test/*.js",
     "browsers": {
